--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "ory-hydra-sdk": "^0.10.0-alpha.7",
     "serve-favicon": "~2.3.0",
     "simple-oauth2": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.0",
+    "@types/simple-oauth2": "^1.0.4"
   }
 }
